--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -397,20 +397,17 @@ set(VIDEOOUT_LIB src/core/libraries/videoout/buffer.h
                  src/core/libraries/videoout/videoout_error.h
 )
 
-set(LIBC_SOURCES src/core/libraries/libc_internal/libc_internal.cpp
+set(HLE_LIBC_INTERNAL_LIB src/core/libraries/libc_internal/libc_internal.cpp
                  src/core/libraries/libc_internal/libc_internal.h
-                 src/core/libraries/libc_internal/libc_internal_mspace.cpp
-                 src/core/libraries/libc_internal/libc_internal_mspace.h
                  src/core/libraries/libc_internal/libc_internal_io.cpp
                  src/core/libraries/libc_internal/libc_internal_io.h
                  src/core/libraries/libc_internal/libc_internal_memory.cpp
                  src/core/libraries/libc_internal/libc_internal_memory.h
                  src/core/libraries/libc_internal/libc_internal_str.cpp
                  src/core/libraries/libc_internal/libc_internal_str.h
-                 src/core/libraries/libc_internal/libc_internal_stream.cpp
-                 src/core/libraries/libc_internal/libc_internal_stream.h
                  src/core/libraries/libc_internal/libc_internal_math.cpp
                  src/core/libraries/libc_internal/libc_internal_math.h
+                 src/core/libraries/libc_internal/printf.h
 )
 
 set(IME_LIB src/core/libraries/ime/error_dialog.cpp
@@ -665,7 +662,7 @@ set(CORE src/core/aerolib/stubs.cpp
          ${KERNEL_LIB}
          ${NETWORK_LIBS}
          ${SYSTEM_LIBS}
-         ${LIBC_SOURCES}
+         ${HLE_LIBC_INTERNAL_LIB}
          ${PAD_LIB}
          ${VIDEOOUT_LIB}
          ${NP_LIBS}
