--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -954,12 +954,6 @@ set(QT_GUI src/qt_gui/about_dialog.cpp
 )
 endif()
 
-set(RESOURCEFOLDER Resources/bronze.png
-    		   Resources/gold.png
-    		   Resources/platinum.png
-    		   Resources/silver.png
-)
-
 if (ENABLE_QT_GUI)
     qt_add_executable(shadps4
         ${AUDIO_CORE}
@@ -971,7 +965,6 @@ if (ENABLE_QT_GUI)
         ${SHADER_RECOMPILER}
         ${VIDEO_CORE}
         ${EMULATOR}
-	${RESOURCEFOLDER}
         src/images/shadPS4.icns
     )
 else()
@@ -984,7 +977,6 @@ else()
         ${SHADER_RECOMPILER}
         ${VIDEO_CORE}
         ${EMULATOR}
-        ${RESOURCEFOLDER}
         src/main.cpp
         src/emulator.cpp
         src/emulator.h
@@ -1117,7 +1109,10 @@ include(CMakeRC)
 cmrc_add_resource_library(embedded-resources
         ALIAS res::embedded
         NAMESPACE res
-        ${RESOURCEFOLDER})
+        src/images/bronze.png
+        src/images/gold.png
+        src/images/platinum.png
+        src/images/silver.png)
 
 target_link_libraries(shadps4 PRIVATE res::embedded)
 
