Add conditional tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -849,6 +849,8 @@ set(SHADER_RECOMPILER src/shader_recompiler/exception.h
                       src/shader_recompiler/ir/basic_block.cpp
                       src/shader_recompiler/ir/basic_block.h
                       src/shader_recompiler/ir/condition.h
+                      src/shader_recompiler/ir/conditional_tree.cpp
+                      src/shader_recompiler/ir/conditional_tree.h
                       src/shader_recompiler/ir/ir_emitter.cpp
                       src/shader_recompiler/ir/ir_emitter.h
                       src/shader_recompiler/ir/microinstruction.cpp
