--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -26,22 +26,19 @@ if (NOT TARGET fmt::fmt)
     add_subdirectory(fmt)
 endif()
 
-if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND MSVC)
-    # If it is clang and MSVC we will add a static lib
-    # CryptoPP
-    add_subdirectory(cryptoppwin)
-    target_include_directories(cryptoppwin INTERFACE cryptoppwin/include)
-else()
-    # CryptoPP
-    if (NOT TARGET cryptopp::cryptopp)
-        set(CRYPTOPP_INSTALL OFF)
-        set(CRYPTOPP_BUILD_TESTING OFF)
-        set(CRYPTOPP_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cryptopp)
-        add_subdirectory(cryptopp-cmake)
-        file(COPY cryptopp DESTINATION cryptopp FILES_MATCHING PATTERN "*.h")
-        # remove externals/cryptopp from include directories because it contains a conflicting zlib.h file
-        set_target_properties(cryptopp PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_BINARY_DIR}/cryptopp")
-    endif()
+# CryptoPP
+if (NOT TARGET cryptopp::cryptopp)
+    set(CRYPTOPP_INSTALL OFF)
+    set(CRYPTOPP_BUILD_TESTING OFF)
+    set(CRYPTOPP_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cryptopp)
+    # cryptopp instruction set checks do not account for added compile options,
+    # so disable extensions in the library config to match our chosen target CPU.
+    set(CRYPTOPP_DISABLE_AESNI ON)
+    set(CRYPTOPP_DISABLE_AVX2 ON)
+    add_subdirectory(cryptopp-cmake)
+    file(COPY cryptopp DESTINATION cryptopp FILES_MATCHING PATTERN "*.h")
+    # remove externals/cryptopp from include directories because it contains a conflicting zlib.h file
+    set_target_properties(cryptopp PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_BINARY_DIR}/cryptopp")
 endif()
 
 if (NOT TARGET FFmpeg::ffmpeg)
