--- a/REUSE.toml
+++ b/REUSE.toml
@@ -49,8 +49,10 @@ path = [
     "src/images/pause_icon.png",
     "src/images/play_icon.png",
     "src/images/ps4_controller.png",
-    "src/images/refresh_icon.png",
+    "src/images/restart_game_icon.png",
+    "src/images/refreshlist_icon.png",
     "src/images/settings_icon.png",
+    "src/images/fullscreen_icon.png",
     "src/images/stop_icon.png",
     "src/images/utils_icon.png",
     "src/images/shadPS4.icns",
