externals: Remove need for cryptopp build.

--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -26,21 +26,7 @@ if (NOT TARGET fmt::fmt)
     add_subdirectory(fmt)
 endif()
 
-# CryptoPP
-if (NOT TARGET cryptopp::cryptopp)
-    set(CRYPTOPP_INSTALL OFF)
-    set(CRYPTOPP_BUILD_TESTING OFF)
-    set(CRYPTOPP_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cryptopp)
-    # cryptopp instruction set checks do not account for added compile options,
-    # so disable extensions in the library config to match our chosen target CPU.
-    set(CRYPTOPP_DISABLE_AESNI ON)
-    set(CRYPTOPP_DISABLE_AVX2 ON)
-    add_subdirectory(cryptopp-cmake)
-    file(COPY cryptopp DESTINATION cryptopp FILES_MATCHING PATTERN "*.h")
-    # remove externals/cryptopp from include directories because it contains a conflicting zlib.h file
-    set_target_properties(cryptopp PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_BINARY_DIR}/cryptopp")
-endif()
-
+# FFmpeg
 if (NOT TARGET FFmpeg::ffmpeg)
     add_subdirectory(ffmpeg-core)
     add_library(FFmpeg::ffmpeg ALIAS ffmpeg)
