casually testing in production

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,22 +143,26 @@ if (GIT_REMOTE_RESULT OR GIT_REMOTE_NAME STREQUAL "")
   set(GIT_REMOTE_NAME "origin")
 
   # Retrieve environment variables
-  if (DEFINED ENV{GITHUB_HEAD_REF})
+  if (DEFINED ENV{GITHUB_HEAD_REF} AND NOT "$ENV{GITHUB_HEAD_REF}" STREQUAL "")
+    message("github head ref: $ENV{GITHUB_HEAD_REF}")
     set(GITHUB_HEAD_REF "$ENV{GITHUB_HEAD_REF}")
   else()
     set(GITHUB_HEAD_REF "")
   endif()
 
-  if (DEFINED ENV{GITHUB_REF})
+  if (DEFINED ENV{GITHUB_REF} AND NOT "$ENV{GITHUB_REF}" STREQUAL "")
+    message("github ref: $ENV{GITHUB_REF}")
     string(REGEX REPLACE "^refs/[^/]*/" "" GITHUB_BRANCH "$ENV{GITHUB_REF}")
+    string(REGEX MATCH "refs/pull/([0-9]+)/merge" MATCHED_REF "$ENV{GITHUB_REF}")
+    if (MATCHED_REF)
+      set(PR_NUMBER "${CMAKE_MATCH_1}")
+      set(GITHUB_BRANCH "")
+      message("PR number: ${PR_NUMBER}")
+    else()
+      set(PR_NUMBER "")
+    endif()
   else()
     set(GITHUB_BRANCH "")
-  endif()
-
-  if (DEFINED ENV{GITHUB_EVENT_PATH})
-    file(READ "$ENV{GITHUB_EVENT_PATH}" GITHUB_EVENT_JSON)
-    string(JSON PR_NUMBER GET ${GITHUB_EVENT_JSON} "number")
-  else()
     set(PR_NUMBER "")
   endif()
 
@@ -168,6 +172,12 @@ if (GIT_REMOTE_RESULT OR GIT_REMOTE_NAME STREQUAL "")
     set(GIT_BRANCH "pr-${PR_NUMBER}-${GITHUB_BRANCH}")
   elseif (NOT "${PR_NUMBER}" STREQUAL "")
     set(GIT_BRANCH "pr-${PR_NUMBER}")
+  elseif ("${PR_NUMBER}" STREQUAL "" AND NOT "${GITHUB_HEAD_REF}" STREQUAL "")
+    set(GIT_BRANCH "${GITHUB_HEAD_REF}")
+  elseif ("${PR_NUMBER}" STREQUAL "" AND NOT "${GITHUB_BRANCH}" STREQUAL "")
+    set(GIT_BRANCH "${GITHUB_BRANCH}")
+  elseif ("${PR_NUMBER}" STREQUAL "" AND NOT "${GITHUB_REF}" STREQUAL "")
+    set(GIT_BRANCH "${GITHUB_REF}")
   else()
     message("couldn't find branch")
     set(GIT_BRANCH "detached-head")
