--- a/.gitmodules
+++ b/.gitmodules
@@ -107,3 +107,6 @@
 	path = externals/MoltenVK/cereal
 	url = https://github.com/USCiLab/cereal
 	shallow = true
+[submodule "externals/libusb"]
+	path = externals/libusb
+	url = https://github.com/libusb/libusb-cmake.git
