cmake: fix system libusb discovery

--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -202,8 +202,9 @@ if (NOT TARGET pugixml::pugixml)
 endif()
 
 # libusb
-if (NOT TARGET usb-1.0)
+if (NOT TARGET libusb::usb)
     add_subdirectory(libusb)
+    add_library(libusb::usb ALIAS usb-1.0)
 endif()
 
 # Discord RPC
