--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -905,6 +905,7 @@ if (ARCHITECTURE STREQUAL "x86_64")
                           src/shader_recompiler/backend/asm_x64/emit_x64_composite.cpp
                           src/shader_recompiler/backend/asm_x64/emit_x64_context_get_set.cpp
                           src/shader_recompiler/backend/asm_x64/emit_x64_convert.cpp
+                          src/shader_recompiler/backend/asm_x64/emit_x64_floating_point.cpp
                           src/shader_recompiler/backend/asm_x64/emit_x64_image.cpp
                           src/shader_recompiler/backend/asm_x64/emit_x64_instructions.h
                           src/shader_recompiler/backend/asm_x64/emit_x64_shared_memory.cpp
