--- a/src/common/scm_rev.cpp.in
+++ b/src/common/scm_rev.cpp.in
@@ -3,21 +3,17 @@
 
 #include "common/scm_rev.h"
 
-#define GIT_REV      "@GIT_REV@"
-#define GIT_BRANCH   "@GIT_BRANCH@"
-#define GIT_DESC     "@GIT_DESC@"
-#define GIT_REMOTE_NAME   "@GIT_REMOTE_NAME@"
-#define GIT_REMOTE_URL    "@GIT_REMOTE_URL@"
-#define BUILD_DATE   "@BUILD_DATE@"
-
 namespace Common {
 
-const char g_scm_rev[]         = GIT_REV;
-const char g_scm_branch[]      = GIT_BRANCH;
-const char g_scm_desc[]        = GIT_DESC;
-const char g_scm_remote_name[] = GIT_REMOTE_NAME;
-const char g_scm_remote_url[]  = GIT_REMOTE_URL;
-const char g_scm_date[]        = BUILD_DATE;
+constexpr char g_version[]  = "@APP_VERSION@";
+constexpr bool g_is_release = @APP_IS_RELEASE@;
+
+constexpr char g_scm_rev[]         = "@GIT_REV@";
+constexpr char g_scm_branch[]      = "@GIT_BRANCH@";
+constexpr char g_scm_desc[]        = "@GIT_DESC@";
+constexpr char g_scm_remote_name[] = "@GIT_REMOTE_NAME@";
+constexpr char g_scm_remote_url[]  = "@GIT_REMOTE_URL@";
+constexpr char g_scm_date[]        = "@BUILD_DATE@";
 
 } // namespace
 
