--- a/REUSE.toml
+++ b/REUSE.toml
@@ -62,6 +62,12 @@ path = [
     "src/images/update_icon.png",
     "src/images/youtube.png",
     "src/images/website.png",
+    "src/images/discord.svg",
+    "src/images/github.svg",
+    "src/images/ko-fi.svg",
+    "src/images/shadps4.svg",
+    "src/images/website.svg",
+    "src/images/youtube.svg",
     "src/shadps4.qrc",
     "src/shadps4.rc",
 	"src/qt_gui/translations/update_translation.sh",
