add macro 16bpp implementation

--- a/src/video_core/host_shaders/CMakeLists.txt
+++ b/src/video_core/host_shaders/CMakeLists.txt
@@ -3,6 +3,7 @@
 
 set(SHADER_FILES
     detilers/display_micro_64bpp.comp
+    detilers/macro_16bpp.comp
     detilers/macro_32bpp.comp
     detilers/macro_64bpp.comp
     detilers/macro_8bpp.comp
