Point sirit to upstream

--- a/.gitmodules
+++ b/.gitmodules
@@ -48,8 +48,7 @@
 	shallow = true
 [submodule "externals/sirit"]
 	path = externals/sirit
-	url = https://github.com/LNDF/sirit.git
-	branch = uwu
+	url = https://github.com/shadps4-emu/sirit.git
 	shallow = true
 [submodule "externals/xxhash"]
 	path = externals/xxhash
