initial save classes for gui save file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1014,7 +1014,7 @@ set(QT_GUI src/qt_gui/about_dialog.cpp
            src/qt_gui/cheats_patches.h
            src/qt_gui/compatibility_info.cpp
            src/qt_gui/compatibility_info.h
-	   src/qt_gui/control_settings.cpp	   
+	       src/qt_gui/control_settings.cpp	   
            src/qt_gui/control_settings.h
            src/qt_gui/control_settings.ui
            src/qt_gui/kbm_gui.cpp	   
@@ -1047,6 +1047,10 @@ set(QT_GUI src/qt_gui/about_dialog.cpp
            src/qt_gui/settings_dialog.h
            src/qt_gui/settings_dialog.ui
            src/qt_gui/main.cpp
+           src/qt_gui/gui_settings.cpp
+           src/qt_gui/gui_settings.h
+           src/qt_gui/settings.cpp
+           src/qt_gui/settings.h
            ${EMULATOR}
            ${RESOURCE_FILES}
            ${TRANSLATIONS}
